--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="new_highscore">New Highscore !!!</string>
     <string name="heads_first_letter">H</string>
     <string name="tails_first_letter">T</string>
-    <string name="app_name">Gaming27</string>
+    <string name="app_name">BigJackpot</string>
     <!--    <string name="deep_link_url">www.deeplinkurl.com</string>-->
     <string name="deep_link_url">games.androappstech.in</string>
     <string name="razor_pay_test">rzp_test_SJyQBaZflutttlZOjC9</string>
